--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -1,27 +1,34 @@
-
+.hero{
+    padding-top:var(--size-1000) ; 
+}
+.hero_txt_header{
+    height: max-content;
+    text-align: center;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+}
 
 @media(min-width:768px){
     .hero{
-        /* margin-top: 102px; */
-        /* border: 1px solid red;  */
         height: fit-content;
         max-width: 1280px;
-        padding-top:var(--size-900) ; 
     }
-    .hero > * > *{
-        /* border: 1px solid red; */
+}
+
+@media(min-width: 1024px){
+    .hero{
+        margin-top: 30px;
     }
     .hero_txt_header{
-        /* border: 1px solid red; */
-        height: max-content;
-        /* min-height: 300px; */
+        width: 100%;
+        max-width: 100%;
+        text-align: left;
     }
 }
 
 
 .hero_txt_header{
-    /* margin-top: var(--size-700); */
-    /* padding-top: var(--size-700); */
     padding-top: var(--size-500);
     padding-bottom: var(--size-500);
 }
@@ -40,43 +47,28 @@
 }
 
 .hero_images{
-    /* border: 1px solid red; */
-    grid-area: hero_images;
-    /* position: relative; */
-    /* height: 100%; */
-    /* height: 300px; */
+    grid-area: hero_images;   
 }
 .hero_image_container{
-    /* border: 1px solid red; */
     position: relative;
     width: auto;
-    /* min-height: 500px; */
-    height: 100%;
-    min-height: 500px;
+    height: fit-content;
     width: 100%;
+    max-width: 404px;
+    min-height: 380px;
+    margin: 0 auto;
 }
 
-
-
-
-/* .hero_image_container:first-child > img{
-    scale: .75;
-    position: relative;
-    margin-left: -60px;    
-    margin-top: 20px;
-    float: left;
+@media(min-width:320px){
+    .hero_image_container{
+        height: 406px;
+    }
 }
-.hero_image_container:nth-child(2) > img{
-    scale: .75;
-    position: relative;
-    margin-top: -15px;
-    margin-left: 75px;
+@media(min-width:425px){
+    .hero_image_container{
+        height: 538px;
+    }
 }
-
-.hero_image_container:nth-child(3) > img{
-    margin-left: -10px;
-    scale: .95;
-} */
 
 @media (min-width: 800px){
     .hero{
@@ -84,11 +76,9 @@
         grid-template-columns: 1fr 1fr;
         grid-template-areas:'hero_txt_header hero_images'
                             'hero_txt_description hero_images' ;
-        
     }
     .hero_txt_header{
         grid-area: hero_txt_header;
-    
         font-weight: var(--fw-bold);
         font-size: var(--fs-900);
         letter-spacing: 1px;
@@ -102,84 +92,36 @@
     }
 
     .hero_images{
-
         height: 100%;
-        /* position: relative; */
-        /* top: 50%;         */
-        /* transform: translate(0, -50%); */
-    }
-
-    /* .hero_image_container {
-        height: 100%;
-        scale: .9;
-    } */
-
-
-    /* .hero_image_container > img{
-        object-fit: contain;
-    }
-
-    .hero_image_container:first-child > img{
-        scale: .75;
-    }
-    .hero_image_container:nth-child(2) > img{
-        scale: .75;
-    }
-    
-    .hero_image_container:nth-child(3) > img{
-        scale: 1;
-    } */
-    
+    }    
   }
 
 
 @media (min-width: 1023px) {
-.hero{ 
-    /* height: 70vh; */
-    grid-template-columns:  1fr .8fr;
-    padding-top: var(--size-900);
-    /* margin-top: var(--size-1000); */
+    .hero{ 
+        grid-template-columns:  1fr .8fr;
+        padding-top: var(--size-900);
+    }
+    .hero_txt_header {
+        position: relative;
 
-}
-.hero_txt_header {
-    position: relative;
+    }
+    .hero_txt_header > h2{
+        font-weight: var(--fw-bold);
+        font-size: var(--fs-800);
+        line-height: var(--size-700);
+    }
 
-}
-.hero_txt_header > h2{
-    /* position: absolute; */
-    /* bottom: 0; */
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-700);
-    line-height: var(--size-700);
-}
-
-.hero_txt_description{
-    padding: var(--size-300);
-    font-weight: var(--fw-regular);
-    font-size: var(--fs-600);
-    line-height: var(--size-600);
-}
-
-/* .hero_image_container:first-child > img{
-    margin-left: -80px;
-}
-.hero_image_container:nth-child(2) > img{
-    margin-left: 120px;
-    margin-top: -45px;
-}
-
-.hero_image_container:nth-child(3) > img{
-    scale: .8;
-} */
-
+    .hero_txt_description{
+        padding: var(--size-300);
+        font-weight: var(--fw-regular);
+        font-size: var(--fs-600);
+        line-height: var(--size-600);
+    }
 }
 
 @media (min-width: 1366px) {
-    .hero{ 
-        /* height: 90vh; */
-        padding-top: var(--size-1000);
 
-    }
     .hero_txt_header >h2{
         font-weight: var(--fw-bold);
         font-size: var(--fs-900);
